--- a/3-Position/myLoc.html
+++ b/3-Position/myLoc.html
@@ -8,6 +8,7 @@
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 </head>
 <body>
+  <div>注意：HTTPS安全连接也许会禁止Google地图的加载</div>
   <div id="location"></div>
   <div id="distance"></div>
   <div id="map"></div>
